--- a/frontend/src/components/card/card.css
+++ b/frontend/src/components/card/card.css
@@ -42,6 +42,34 @@
     font-weight: 700;
 }
 
+.card-title a, .card-text a {
+    text-decoration: none;
+    color: #000;
+    cursor: pointer;
+}
+
+.card-title a:hover, .card-text a:hover {
+    text-decoration: none;
+    color: #2e6aa7;
+    cursor: pointer;
+}
+
+.card-btns {
+    text-align: center;
+}
+.btn-read, .btn-download {
+    margin: 5px;
+    width: 80px;
+    padding: 5px;
+    font-size: 0.6em;
+    background-color: #2e6aa7;
+    color: #fff;
+    box-shadow: 0 0 0 0;
+}
+
+
+
+
 .card-text {
     padding: 5%;
     padding-top: 0;
