--- a/frontend/src/components/sidebar/sidebar.css
+++ b/frontend/src/components/sidebar/sidebar.css
@@ -78,3 +78,19 @@ section.sidebar {
     padding: 5px; 
     margin-left: auto;  
 }
+
+@media only screen and (min-width: 1024px) {
+    .sidebar {
+        position: relative;
+        top: 2em;
+        left: -60px;
+    }
+}
+
+@media only screen and (min-width: 1600px) {
+    .sidebar {
+        position: relative;
+        top: 0.4em;
+        left: -60px;
+    }
+}
