--- a/frontend/src/pages/categories/categories.css
+++ b/frontend/src/pages/categories/categories.css
@@ -1,4 +1,5 @@
 .breadcrumb {
+    flex: 0 0 96%;
     background-color: #fff;
     border-radius: 1em;
     margin-top: 2%;
@@ -9,4 +10,26 @@
 .breadcrumb a {
     text-decoration: none;
     font-weight: 700;
+}
+
+@media only screen and (min-width: 1024px) {
+
+    .breadcrumb {
+        flex: 0 0 94%;
+        margin-top: 0;
+        padding: 2%;
+
+    }
+
+}
+
+@media only screen and (min-width: 1300px) {
+
+    .breadcrumb {
+        flex: 0 0 92%;
+        margin-top: 0;
+        padding: 2%;
+
+    }
+
 }
