--- a/frontend/src/components/dropdown/dropdown.css
+++ b/frontend/src/components/dropdown/dropdown.css
@@ -10,6 +10,7 @@
     margin-top: 5px;
     border-radius: 10px;
     box-shadow: 0 .3rem 1rem rgba(0, 0, 0, 0.1);
+    z-index: 100;
 }
 
 .dropdown-ul li {
